--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -42,6 +42,17 @@
 
     }
 
+    .navLists{
+        gap: 20px;
+        justify-content: center;
+        width: 100%;
+        margin:auto;
+        padding: .5rem 0;
+    }
+
+    
+
+   
   @media screen and (max-width:768px){
     .navBar{
         position: absolute;
@@ -89,6 +100,8 @@
   }
 
 .toggleNavbar{
+
+ 
     .icon{
         font-size: 25px;
         color: var(--PrimaryColor);
